--- a/.github/workflows/qpdf-publish.yml
+++ b/.github/workflows/qpdf-publish.yml
@@ -34,6 +34,7 @@ jobs:
           
           cmake -S . -B build \
             -DCMAKE_BUILD_TYPE=Release \
+            -DBUILD_SHARED_LIBS=OFF \
             -DUSE_IMPLICIT_CRYPTO=0 \
             -DREQUIRE_CRYPTO_OPENSSL=1 \
             -DOpenSSL_ROOT_DIR="${OPENSSL_PREFIX}" \
