--- a/.github/workflows/openjpeg-publish.yml
+++ b/.github/workflows/openjpeg-publish.yml
@@ -29,30 +29,12 @@ jobs:
 
       - working-directory: openjpeg
         run: |
-          PNG_PREFIX=$(brew --prefix libpng)
-          TIFF_PREFIX=$(brew --prefix libtiff)
-          LCMS2_PREFIX=$(brew --prefix little-cms2)
-          ZSTD_PREFIX=$(brew --prefix zstd)
-          JPEG_TURBO_PREFIX=$(brew --prefix jpeg-turbo)
-          XZ_PREFIX=$(brew --prefix xz)
-          
-          CMAKE_PREFIX_PATH_VALUE="${PNG_PREFIX};${TIFF_PREFIX};${LCMS2_PREFIX};${ZSTD_PREFIX};${JPEG_TURBO_PREFIX};${XZ_PREFIX}"
-          LINKER_FLAGS="-L${PNG_PREFIX}/lib -L${TIFF_PREFIX}/lib -L${LCMS2_PREFIX}/lib -L${ZSTD_PREFIX}/lib -L${JPEG_TURBO_PREFIX}/lib -L${XZ_PREFIX}/lib"
-  
           cmake -S . -B build \
             -DCMAKE_BUILD_TYPE=Release \
             -DBUILD_SHARED_LIBS=OFF \
+            -DBUILD_THIRDPARTY=ON \
             -DBUILD_DOC=OFF \
             -DBUILD_TESTING=OFF \
-            -DCMAKE_FIND_LIBRARY_SUFFIXES=".a;.dylib" \
-            -DPNG_INCLUDE_DIR="${PNG_PREFIX}/include" \
-            -DPNG_LIBRARY="${PNG_PREFIX}/lib/libpng.a" \
-            -DTIFF_INCLUDE_DIR="${TIFF_PREFIX}/include" \
-            -DTIFF_LIBRARY="${TIFF_PREFIX}/lib/libtiff.a" \
-            -Dlcms2_INCLUDE_DIR="${LCMS2_PREFIX}/include" \
-            -Dlcms2_LIBRARY="${LCMS2_PREFIX}/lib/liblcms2.a" \
-            -DCMAKE_PREFIX_PATH="${CMAKE_PREFIX_PATH_VALUE}" \
-            -DCMAKE_EXE_LINKER_FLAGS="${LINKER_FLAGS}" \
             -Wno-dev
 
       - working-directory: openjpeg
