--- a/.github/workflows/qpdf-publish.yml
+++ b/.github/workflows/qpdf-publish.yml
@@ -32,18 +32,19 @@ jobs:
           JPEG_TURBO_PREFIX=$(brew --prefix jpeg-turbo)
           OPENSSL_PREFIX=$(brew --prefix openssl@3)
           
+          rm -rf "${JPEG_TURBO_PREFIX}/lib/"*.dylib
+          rm -rf "${OPENSSL_PREFIX}/lib/"*.dylib
+          
           cmake -S . -B build \
             -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_OSX_ARCHITECTURES="arm64" \
             -DBUILD_SHARED_LIBS=OFF \
+            -DBUILD_STATIC_LIBS=1 \
             -DUSE_IMPLICIT_CRYPTO=0 \
             -DREQUIRE_CRYPTO_OPENSSL=1 \
-            -DOpenSSL_ROOT_DIR="${OPENSSL_PREFIX}" \
-            -DOpenSSL_USE_STATIC_LIBS=TRUE \
-            -DJPEG_INCLUDE_DIR="${JPEG_TURBO_PREFIX}/include" \
-            -DJPEG_LIBRARY="${JPEG_TURBO_PREFIX}/lib/libjpeg.a" \
             -DCMAKE_PREFIX_PATH="${JPEG_TURBO_PREFIX};${OPENSSL_PREFIX}" \
-            -Wno-dev \
-            -DBUILD_TESTING=OFF
+            -DCMAKE_FIND_LIBRARY_SUFFIXES=".a" \
+            -DCMAKE_EXE_LINKER_FLAGS="-L${JPEG_TURBO_PREFIX}/lib -L${OPENSSL_PREFIX}/lib"
 
       - working-directory: qpdf
         run: cmake --build build --config Release --verbose
